# 2024-P1-VuKhanhVyHo

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
